--- a/MD/Foundation/MagicObject.html
+++ b/MD/Foundation/MagicObject.html
@@ -24,6 +24,16 @@
 <link rel="stylesheet" href="../../assets/components/prism/prism.css" data-package="lib">
 <link rel="stylesheet" href="../../assets/css/docs.css" data-package="app">
 
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-2364455-13', 'michaldudek.pl');
+      ga('send', 'pageview');
+    </script>
 </head>
 
 <body class="class-page">
