Also include interfaces and exceptions in the docs. Properly display class type.

--- a/index.html
+++ b/index.html
@@ -69,12 +69,25 @@
                                                                     <li><a href="MD/Foundation/Debug/TimerStep.html">TimerStep</a></li>
                                                             </ul>
                         </div>
-                                                                                                                                                                                                                                            <div class="namespace">
+                                                                                                                                            <div class="namespace">
+                            <h4>Debug\Interfaces\</h4>
+
+                            <ul>
+                                                                    <li><a href="MD/Foundation/Debug/Interfaces/Dumpable.html">Dumpable</a></li>
+                                                            </ul>
+                        </div>
+                                                                                                                                            <div class="namespace">
                             <h4>Exceptions\</h4>
 
                             <ul>
+                                                                    <li><a href="MD/Foundation/Exceptions/Exception.html">Exception</a></li>
                                                                     <li><a href="MD/Foundation/Exceptions/InvalidArgumentException.html">InvalidArgumentException</a></li>
+                                                                    <li><a href="MD/Foundation/Exceptions/InvalidFileException.html">InvalidFileException</a></li>
+                                                                    <li><a href="MD/Foundation/Exceptions/InvalidReturnValueException.html">InvalidReturnValueException</a></li>
+                                                                    <li><a href="MD/Foundation/Exceptions/NotFoundException.html">NotFoundException</a></li>
                                                                     <li><a href="MD/Foundation/Exceptions/NotImplementedException.html">NotImplementedException</a></li>
+                                                                    <li><a href="MD/Foundation/Exceptions/NotUniqueException.html">NotUniqueException</a></li>
+                                                                    <li><a href="MD/Foundation/Exceptions/ReadOnlyException.html">ReadOnlyException</a></li>
                                                             </ul>
                         </div>
                                                                                                                                             <div class="namespace">
