--- a/MD/Foundation/Debug/Timer.html
+++ b/MD/Foundation/Debug/Timer.html
@@ -111,7 +111,7 @@
                 MD\Foundation\Debug\Timer
                                     <small>Class</small>
                             </h1>
-            <div class="short-desc">
+                        <div class="short-desc">
                 
 
             </div>
@@ -195,7 +195,9 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">BadMethodCallException</td>
+                                                        <td class="code">                                                                                                
+                    BadMethodCallException
+            </td>
                                                         <td><p>When the timer was already started.</p>
 </td>
                                                     </tr>
