--- a/MD/Foundation/Utils/ObjectUtils.html
+++ b/MD/Foundation/Utils/ObjectUtils.html
@@ -111,7 +111,7 @@
                 MD\Foundation\Utils\ObjectUtils
                                     <small>Class</small>
                             </h1>
-            <div class="short-desc">
+                        <div class="short-desc">
                 
 
             </div>
@@ -195,7 +195,9 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">InvalidArgumentException</td>
+                                                        <td class="code">                                                                                                                    
+                    <a href="../../../MD/Foundation/Exceptions/InvalidArgumentException.html">MD\Foundation\Exceptions\InvalidArgumentException</a>
+            </td>
                                                         <td><p>When the given $objects argument is not an array or cannot be converted to an array.</p>
 </td>
                                                     </tr>
@@ -331,7 +333,9 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">InvalidArgumentException</td>
+                                                        <td class="code">                                                                                                                    
+                    <a href="../../../MD/Foundation/Exceptions/InvalidArgumentException.html">MD\Foundation\Exceptions\InvalidArgumentException</a>
+            </td>
                                                         <td><p>When the given $objects argument is not an array or cannot be converted to an array.</p>
 </td>
                                                     </tr>
@@ -494,7 +498,9 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">InvalidArgumentException</td>
+                                                        <td class="code">                                                                                                                    
+                    <a href="../../../MD/Foundation/Exceptions/InvalidArgumentException.html">MD\Foundation\Exceptions\InvalidArgumentException</a>
+            </td>
                                                         <td><p>When the given $objects argument is not an array or cannot be converted to an array.</p>
 </td>
                                                     </tr>
@@ -671,7 +677,9 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">InvalidArgumentException</td>
+                                                        <td class="code">                                                                                                                    
+                    <a href="../../../MD/Foundation/Exceptions/InvalidArgumentException.html">MD\Foundation\Exceptions\InvalidArgumentException</a>
+            </td>
                                                         <td><p>When the given $objects argument is not an array or cannot be converted to an array.</p>
 </td>
                                                     </tr>
@@ -835,7 +843,9 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">InvalidArgumentException</td>
+                                                        <td class="code">                                                                                                                    
+                    <a href="../../../MD/Foundation/Exceptions/InvalidArgumentException.html">MD\Foundation\Exceptions\InvalidArgumentException</a>
+            </td>
                                                         <td><p>When the given $objects argument is not an array or cannot be converted to an array.</p>
 </td>
                                                     </tr>
@@ -895,7 +905,9 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">InvalidArgumentException</td>
+                                                        <td class="code">                                                                                                                    
+                    <a href="../../../MD/Foundation/Exceptions/InvalidArgumentException.html">MD\Foundation\Exceptions\InvalidArgumentException</a>
+            </td>
                                                         <td><p>When the given $objects argument is not an array or cannot be converted to an array.</p>
 </td>
                                                     </tr>
