--- a/MD/Foundation/LogLevels.html
+++ b/MD/Foundation/LogLevels.html
@@ -111,7 +111,7 @@
                 MD\Foundation\LogLevels
                                     <small>Class</small>
                             </h1>
-            <div class="short-desc">
+                        <div class="short-desc">
                 <p>Helper class to use with <code>\Psr\Log</code> that helps in evaluating log levels hierarchy.</p>
 
             </div>
@@ -217,7 +217,11 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                 <div class="method-info">
                                     <div class="method-short-desc"><p>Evaluates the given PSR log level as an integer.</p>
 </div>
-                                    <div class="method-long-desc language-php">
+                                    <div class="method-long-desc language-php"><p>Example:</p>
+
+<pre><code> echo \MD\Foundation\LogLevels::evaluateLevel(\Psr\Log\LogLevel::CRITICAL);
+ // -&gt; 500
+</code></pre>
 </div>
 
                                                                             <h5>Arguments:</h5>
@@ -228,7 +232,7 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                                         <td class="code param-name">
                                                                                                                         $level
                                                         </td>
-                                                        <td><p>One of Psr\Log\LogLevel constants.</p>
+                                                        <td><p>One of <code>\Psr\Log\LogLevel</code> constants.</p>
 </td>
                                                     </tr>
                                                                                             </tbody>
@@ -246,7 +250,9 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">InvalidArgumentException</td>
+                                                        <td class="code">                                                                                                
+                    <a href="../../MD/Foundation/Exceptions/InvalidArgumentException.html">MD\Foundation\Exceptions\InvalidArgumentException</a>
+            </td>
                                                         <td><p>When unrecognized log level.</p>
 </td>
                                                     </tr>
@@ -287,7 +293,11 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                 <div class="method-info">
                                     <div class="method-short-desc"><p>Checks if the given level is higher than the other one.</p>
 </div>
-                                    <div class="method-long-desc language-php">
+                                    <div class="method-long-desc language-php"><p>Example:</p>
+
+<pre><code> echo \MD\Foundation\LogLevels::isHigherLevel(\Psr\Log\LogLevel::CRITICAL, \PSR\Log\LogLevel::WARNING);
+ // -&gt; true
+</code></pre>
 </div>
 
                                                                             <h5>Arguments:</h5>
@@ -298,7 +308,7 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                                         <td class="code param-name">
                                                                                                                         $level
                                                         </td>
-                                                        <td><p>Level to be compared. One of Psr\Log\LogLevel constants.</p>
+                                                        <td><p>Level to be compared. One of <code>\Psr\Log\LogLevel</code> constants.</p>
 </td>
                                                     </tr>
                                                                                                     <tr>
@@ -306,7 +316,7 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                                         <td class="code param-name">
                                                                                                                         $against
                                                         </td>
-                                                        <td><p>Level to be compared against. One of Psr\Log\LogLevel constants.</p>
+                                                        <td><p>Level to be compared against. One of <code>\Psr\Log\LogLevel</code> constants.</p>
 </td>
                                                     </tr>
                                                                                                     <tr>
@@ -314,7 +324,7 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                                         <td class="code param-name">
                                                                                                                         $inclusive
                                                         </td>
-                                                        <td><p>[optional] Should the comparison be inclusive, ie. higher than or equal. Default: false.</p>
+                                                        <td><p>[optional] Should the comparison be inclusive, ie. higher than or equal. Default: <code>false</code>.</p>
 </td>
                                                     </tr>
                                                                                             </tbody>
@@ -363,7 +373,11 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                 <div class="method-info">
                                     <div class="method-short-desc"><p>Checks if the given level is lower than the other one.</p>
 </div>
-                                    <div class="method-long-desc language-php">
+                                    <div class="method-long-desc language-php"><p>Example:</p>
+
+<pre><code> echo \MD\Foundation\LogLevels::isLowerLevel(\Psr\Log\LogLevel::CRITICAL, \PSR\Log\LogLevel::WARNING);
+ // -&gt; false
+</code></pre>
 </div>
 
                                                                             <h5>Arguments:</h5>
@@ -374,7 +388,7 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                                         <td class="code param-name">
                                                                                                                         $level
                                                         </td>
-                                                        <td><p>Level to be compared. One of Psr\Log\LogLevel constants.</p>
+                                                        <td><p>Level to be compared.  One of <code>\Psr\Log\LogLevel</code> constants.</p>
 </td>
                                                     </tr>
                                                                                                     <tr>
@@ -382,7 +396,7 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                                         <td class="code param-name">
                                                                                                                         $against
                                                         </td>
-                                                        <td><p>Level to be compared against. One of Psr\Log\LogLevel constants.</p>
+                                                        <td><p>Level to be compared against.  One of <code>\Psr\Log\LogLevel</code> constants.</p>
 </td>
                                                     </tr>
                                                                                                     <tr>
@@ -390,7 +404,7 @@ as PSR-3 doesn't really define the hierarchy here.</p>
                                                         <td class="code param-name">
                                                                                                                         $inclusive
                                                         </td>
-                                                        <td><p>[optional] Should the comparison be inclusive, ie. lower than or equal. Default: false.</p>
+                                                        <td><p>[optional] Should the comparison be inclusive, ie. lower than or equal. Default: <code>false</code>.</p>
 </td>
                                                     </tr>
                                                                                             </tbody>
