--- a/MD/Foundation/Debug/Interfaces/Dumpable.html
+++ b/MD/Foundation/Debug/Interfaces/Dumpable.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Dumpable class in MD\Foundation</title>
-    <meta name="description" content="">
+    <meta name="description" content="Interface that allows the Debugger to easily dump clean objects.">
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -112,7 +112,7 @@
                                     <small>Interface</small>
                             </h1>
                         <div class="short-desc">
-                
+                <p>Interface that allows the Debugger to easily dump clean objects.</p>
 
             </div>
         </div>
