--- a/MD/Foundation/Debug/Debugger.html
+++ b/MD/Foundation/Debug/Debugger.html
@@ -111,7 +111,7 @@
                 MD\Foundation\Debug\Debugger
                                     <small>Class</small>
                             </h1>
-                        <div class="short-desc">
+                                                <div class="short-desc">
                 <p>Helps with working with PHP code, variables, types and overall debugging.</p>
 
             </div>
@@ -725,7 +725,7 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">                                                                                                                                        
+                                                        <td class="code">                                                                                                                                                                                                    
                     <a href="../../../MD/Foundation/Exceptions/NotImplementedException.html">MD\Foundation\Exceptions\NotImplementedException</a>
             </td>
                                                         <td><p>This method is not yet implemented.</p>
@@ -879,7 +879,7 @@
 
 <pre><code> $trace = debug_backtrace();
  echo \MD\Foundation\Debug\Debugger::getPrettyTrace($trace);
- // -&gt; array('function' =&gt; ..., 'file' =&gt; ..., 'arguments' =&gt; ...)
+ // -&gt; array(array('function' =&gt; ..., 'file' =&gt; ..., 'arguments' =&gt; ...)), ...)
 </code></pre>
 </div>
 
