--- a/MD/Foundation/Debug/TimerStep.html
+++ b/MD/Foundation/Debug/TimerStep.html
@@ -111,7 +111,15 @@
                 MD\Foundation\Debug\TimerStep
                                     <small>Class</small>
                             </h1>
-                        <div class="short-desc">
+                                        <ul class="class-parents list-unstyled list-inline">
+                    <li class="meta"><small>Extends</small></li>
+                                            <li>
+                                                            <span class="code">                                                                                                        
+                    <a href="../../../MD/Foundation/Debug/Timer.html">MD\Foundation\Debug\Timer</a>
+            </span>
+                                                    </li>
+                                    </ul>
+                                    <div class="short-desc">
                 
 
             </div>
@@ -281,7 +289,7 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">                                                                                                
+                                                        <td class="code">                                                                                                                                            
                     BadMethodCallException
             </td>
                                                         <td><p>When the timer was already started.</p>
@@ -347,7 +355,7 @@
                                         <table class="table table-striped table-condensed">
                                             <tbody>
                                                                                                     <tr>
-                                                        <td class="code">                                                                                                
+                                                        <td class="code">                                                                                                                                            
                     BadMethodCallException
             </td>
                                                         <td><p>When the timer was already stopped.</p>
