--- a/MD/Foundation/Exceptions/Exception.html
+++ b/MD/Foundation/Exceptions/Exception.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Exception class in MD\Foundation</title>
-    <meta name="description" content="">
+    <meta name="description" content="MD\Foundation generic exception.">
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,8 +111,16 @@
                 MD\Foundation\Exceptions\Exception
                                     <small>Exception</small>
                             </h1>
-                        <div class="short-desc">
-                
+                                        <ul class="class-parents list-unstyled list-inline">
+                    <li class="meta"><small>Extends</small></li>
+                                            <li>
+                                                            <span class="code">                                                                            
+                    Exception
+            </span>
+                                                    </li>
+                                    </ul>
+                                    <div class="short-desc">
+                <p>MD\Foundation generic exception.</p>
 
             </div>
         </div>
