--- a/MD/Foundation/Exceptions/NotFoundException.html
+++ b/MD/Foundation/Exceptions/NotFoundException.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>NotFoundException class in MD\Foundation</title>
-    <meta name="description" content="">
+    <meta name="description" content="Exception usually thrown when something was not found.">
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,8 +111,22 @@
                 MD\Foundation\Exceptions\NotFoundException
                                     <small>Exception</small>
                             </h1>
-                        <div class="short-desc">
-                
+                                        <ul class="class-parents list-unstyled list-inline">
+                    <li class="meta"><small>Extends</small></li>
+                                            <li>
+                                                            <span class="code">                                                                            
+                    <a href="../../../MD/Foundation/Exceptions/Exception.html">MD\Foundation\Exceptions\Exception</a>
+            </span>
+                                                    </li>
+                                            <li>
+                                                            <small>&gt;</small>
+                                <span class="code">                            
+                    Exception
+            </span>
+                                                    </li>
+                                    </ul>
+                                    <div class="short-desc">
+                <p>Exception usually thrown when something was not found.</p>
 
             </div>
         </div>
