Full docs for ArrayUtils.

--- a/MD/Foundation/Utils/ObjectUtils.html
+++ b/MD/Foundation/Utils/ObjectUtils.html
@@ -156,7 +156,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Returns an array with a list of all values (not unique) assigned to a key in a collection of objects.</p>
+                                                                        <div class="method-short-desc"><p>Returns an array with a list of all values (not unique) assigned to a key in a collection of objects.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -205,7 +205,7 @@
                                         </table>
                                                                     </div>
                             </div>
-                                                    <div id="keyFilter" class="method">
+                                                    <div id="keyFilter" class="method deprecated">
                                 <h3 class="code">
                                         <span class="method-signature">
                                     <span class="method-modifier">static</span>
@@ -231,7 +231,12 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Alias for ::pluck().</p>
+                                                                            <div class="alert alert-danger">
+                                            <strong>Deprecated!</strong>
+                                            This method has been deprecated.
+                                            <strong>Do not use it anymore!</strong>
+                                                                                    </div>
+                                                                        <div class="method-short-desc"><p>Alias for ::pluck().</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -294,7 +299,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Assigns a value under a key of a collection of objects to its main (top level) key.</p>
+                                                                        <div class="method-short-desc"><p>Assigns a value under a key of a collection of objects to its main (top level) key.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -343,7 +348,7 @@
                                         </table>
                                                                     </div>
                             </div>
-                                                    <div id="keyExplode" class="method">
+                                                    <div id="keyExplode" class="method deprecated">
                                 <h3 class="code">
                                         <span class="method-signature">
                                     <span class="method-modifier">static</span>
@@ -369,7 +374,12 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Alias for ::indexBy().</p>
+                                                                            <div class="alert alert-danger">
+                                            <strong>Deprecated!</strong>
+                                            This method has been deprecated.
+                                            <strong>Do not use it anymore!</strong>
+                                                                                    </div>
+                                                                        <div class="method-short-desc"><p>Alias for ::indexBy().</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -443,7 +453,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Filters out all values from a multidimensional array that contains objects that match the given value of they given associative level 2 key.</p>
+                                                                        <div class="method-short-desc"><p>Filters out all values from a multidimensional array that contains objects that match the given value of they given associative level 2 key.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -508,7 +518,7 @@
                                         </table>
                                                                     </div>
                             </div>
-                                                    <div id="filterByKeyValue" class="method">
+                                                    <div id="filterByKeyValue" class="method deprecated">
                                 <h3 class="code">
                                         <span class="method-signature">
                                     <span class="method-modifier">static</span>
@@ -545,7 +555,12 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Alias for ::filter().</p>
+                                                                            <div class="alert alert-danger">
+                                            <strong>Deprecated!</strong>
+                                            This method has been deprecated.
+                                            <strong>Do not use it anymore!</strong>
+                                                                                    </div>
+                                                                        <div class="method-short-desc"><p>Alias for ::filter().</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -630,7 +645,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Categorize all items from the collection of objects by the value of a specific key.</p>
+                                                                        <div class="method-short-desc"><p>Categorize all items from the collection of objects by the value of a specific key.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -687,7 +702,7 @@
                                         </table>
                                                                     </div>
                             </div>
-                                                    <div id="categorizeByKey" class="method">
+                                                    <div id="categorizeByKey" class="method deprecated">
                                 <h3 class="code">
                                         <span class="method-signature">
                                     <span class="method-modifier">static</span>
@@ -719,7 +734,12 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Alias for ::groupBy().</p>
+                                                                            <div class="alert alert-danger">
+                                            <strong>Deprecated!</strong>
+                                            This method has been deprecated.
+                                            <strong>Do not use it anymore!</strong>
+                                                                                    </div>
+                                                                        <div class="method-short-desc"><p>Alias for ::groupBy().</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -796,7 +816,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Sorts a collection of object based on the specified key.</p>
+                                                                        <div class="method-short-desc"><p>Sorts a collection of object based on the specified key.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -874,7 +894,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Resets keys of an array containing a collection of objects to numerical values starting with 0.</p>
+                                                                        <div class="method-short-desc"><p>Resets keys of an array containing a collection of objects to numerical values starting with 0.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -935,7 +955,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Creates a getter name for the given object property name.</p>
+                                                                        <div class="method-short-desc"><p>Creates a getter name for the given object property name.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -984,7 +1004,7 @@
                                 </h3>
 
                                 <div class="method-info">
-                                    <div class="method-short-desc"><p>Creates a setter name for the given object property name.</p>
+                                                                        <div class="method-short-desc"><p>Creates a setter name for the given object property name.</p>
 </div>
                                     <div class="method-long-desc language-php">
 </div>
@@ -1023,13 +1043,13 @@
                                                     <h4><a href="#section-methods">Methods</a></h4>
                             <ul class="list-unstyled">
                                                                     <li><a href="#pluck" class="code">pluck</a></li>
-                                                                    <li><a href="#keyFilter" class="code">keyFilter</a></li>
+                                                                    <li><a href="#keyFilter" class="code deprecated">keyFilter</a></li>
                                                                     <li><a href="#indexBy" class="code">indexBy</a></li>
-                                                                    <li><a href="#keyExplode" class="code">keyExplode</a></li>
+                                                                    <li><a href="#keyExplode" class="code deprecated">keyExplode</a></li>
                                                                     <li><a href="#filter" class="code">filter</a></li>
-                                                                    <li><a href="#filterByKeyValue" class="code">filterByKeyValue</a></li>
+                                                                    <li><a href="#filterByKeyValue" class="code deprecated">filterByKeyValue</a></li>
                                                                     <li><a href="#groupBy" class="code">groupBy</a></li>
-                                                                    <li><a href="#categorizeByKey" class="code">categorizeByKey</a></li>
+                                                                    <li><a href="#categorizeByKey" class="code deprecated">categorizeByKey</a></li>
                                                                     <li><a href="#multiSort" class="code">multiSort</a></li>
                                                                     <li><a href="#resetKeys" class="code">resetKeys</a></li>
                                                                     <li><a href="#getter" class="code">getter</a></li>
