Link to the announcement article on blog.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
             <pre><code>$ composer require michaldudek/foundation dev-master</code></pre>
         </section>
 
+        <section class="more">
+            <p>Read more in <a href="http://www.michaldudek.pl/blog/php-foundation-utils.html">announcement article</a>.</p>
+        </section>
+
         <section class="features">
             <div class="row">
 
